--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
@@ -7,18 +7,18 @@ org.gradle.configuration-cache=true
 
 #read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-parchment_minecraft_version=1.20.6
-parchment_mappings_version=2024.06.02
+parchment_minecraft_version=1.21
+parchment_mappings_version=2024.07.28
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
-minecraft_version=1.21
+minecraft_version=1.21.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.21,1.21.1)
+minecraft_version_range=[1.21,1.22)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.0.20-beta
+neo_version=21.1.65
 # The Neo version range can use any version of Neo as bounds
 neo_version_range=[21.0.0-beta,)
 # The loader version range can only use the major version of FML as bounds
@@ -26,8 +26,8 @@ loader_version_range=[4,)
 
 
 # JEI
-mc_version=1.21
-jei_version=19.0.0.9
+mc_version=1.21.1
+jei_version=19.19.6.233
 
 
 
@@ -41,7 +41,7 @@ mod_name=Iron Furnaces
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
 # The mod version. See https://semver.org/
-mod_version=4.2.5
+mod_version=4.2.6
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
